--- a/requirements.txt
+++ b/requirements.txt
@@ -146,3 +146,16 @@ xgboost==1.6.2
 yarl==1.8.1
 zipp==3.9.0
 librosa==0.9.2
+jupyterlab==3.2.5
+matplotlib==3.5.1
+pandas==1.3.5
+numpy==1.22.0
+seaborn==0.11.2
+statsmodels==0.13.1
+scikit-learn==1.0.2
+pydot==1.4.2
+protobuf==3.20.1
+tensorflow-macos==2.8.0
+tensorflow-metal==0.4.0
+Keras==2.8.0
+tensorflow-hub==0.12.0
