--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ tensorflow-macos==2.8.0
 tensorflow-metal==0.5.1
 Keras==2.8.0
 tensorflow-hub==0.12.0
+scikit-image==0.19.3
+joblib==1.2.0
+tqdm==4.64.1
+Pillow==9.3.0
